# pants-uv-lifecycle-plugin

./: .bumpversion.toml  .gitignore  BUILD  README.md  pants.toml  pyproject.toml
.github/workflows/: build.yaml
example-project/: README.md  pyproject.toml
example-project/pytests/: test_generate_array.py
example-project/src/example_project/: generate_array.py
example-project/tests/features/: generate_array.feature
example-project/tests/features/steps/: generate_array_step.py
src/pants_uv_lifecycle_plugin/: BUILD  register.py  run_uv_build.py  run_uv_publish.py  run_uv_sync.py  uv_run_behave.py
src/pants_uv_lifecycle_plugin/utils/: rule_utils.py
tests/: BUILD  test_run_uv_build.py  test_run_uv_sync.py
