[project]
name = "pants-uv-lifecycle-plugin"
version = "0.1.4"
description = "The repository contains the Pantsbuild `uv` plugins."
readme = "README.md"
authors = [
    { name = "Isaac Becerra Llano", email = "BecerraLlanos_Isaac@ne.bah.com" },
    { name = "Margaret Black", email = "black_margaret@bah.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"