[project]
name = "pants-uv-lifecycle-plugin"
version = "0.1.7-dev10"
description = "The repository contains the Pantsbuild `uv` plugins."
readme = "README.md"
authors = [
    { name = "Isaac Becerra Llano", email = "BecerraLlanos_Isaac@ne.bah.com" },
    { name = "Margaret Black", email = "black_margaret@bah.com" },
    { name = "Annie Chang", email = "chang_anne@bah.com" }
]
requires-python = ">=3.9"
dependencies = [
    "behave>=1.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bump-my-version>=0.29.0",
]

